--- a/app/src/main/res/layout/activity_edit_transaction.xml
+++ b/app/src/main/res/layout/activity_edit_transaction.xml
@@ -37,7 +37,7 @@
         app:layout_constraintBottom_toTopOf="@+id/edittext_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textview_what_the_heck"
-        app:layout_constraintTop_toBottomOf="@+id/textview_title"/>
+        app:layout_constraintTop_toBottomOf="@+id/textview_title" />
 
     <TextView
         android:id="@+id/textview_date"
@@ -54,12 +54,16 @@
         android:id="@+id/edittext_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:minWidth="120dp"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/textview_place"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textview_date"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_what_the_heck"/>
+        app:layout_constraintTop_toBottomOf="@+id/edittext_what_the_heck" />
 
     <TextView
         android:id="@+id/textview_place"
@@ -81,7 +85,7 @@
         app:layout_constraintBottom_toTopOf="@+id/edittext_amount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textview_place"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_date"/>
+        app:layout_constraintTop_toBottomOf="@+id/edittext_date" />
 
     <TextView
         android:id="@+id/textview_amount"
@@ -98,13 +102,13 @@
         android:id="@+id/edittext_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="120dp"
         android:inputType="number"
+        android:minWidth="120dp"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/togglebutton_type"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textview_amount"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_place"/>
+        app:layout_constraintTop_toBottomOf="@+id/edittext_place" />
 
     <TextView
         android:id="@+id/textview_type"
@@ -112,56 +116,24 @@
         android:layout_height="wrap_content"
         android:text="@string/field_type"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/textview_comments"
+        app:layout_constraintBottom_toTopOf="@+id/textview_categories"
         app:layout_constraintEnd_toStartOf="@+id/togglebutton_type"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_amount" />
-
-    <!--    <EditText
-            android:id="@+id/edittext_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Deposit"
-            android:textSize="25dp"
-            app:layout_constraintBottom_toTopOf="@+id/textview_comments"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textview_type"
-            app:layout_constraintTop_toBottomOf="@+id/edittext_amount"/>-->
 
     <androidx.appcompat.widget.AppCompatToggleButton
         android:id="@+id/togglebutton_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:checked="true"
         android:text="Deposit"
-        android:textSize="25dp"
-        android:textOn="Withdrawal"
         android:textOff="Deposit"
-        app:layout_constraintBottom_toTopOf="@+id/edittext_comments"
+        android:textOn="Withdrawal"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/spinner_categories"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textview_type"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_amount"/>
-
-    <TextView
-        android:id="@+id/textview_comments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/field_comments"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/textview_categories"
-        app:layout_constraintEnd_toStartOf="@+id/edittext_comments"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_type" />
-
-    <EditText
-        android:id="@+id/edittext_comments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="120dp"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/edittext_categories"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textview_comments"
-        app:layout_constraintTop_toBottomOf="@+id/togglebutton_type"/>
+        app:layout_constraintTop_toBottomOf="@+id/edittext_amount" />
 
     <TextView
         android:id="@+id/textview_categories"
@@ -169,21 +141,43 @@
         android:layout_height="wrap_content"
         android:text="@string/field_categories"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_edit_transaction"
-        app:layout_constraintEnd_toStartOf="@+id/edittext_categories"
+        app:layout_constraintBottom_toTopOf="@+id/textview_comments"
+        app:layout_constraintEnd_toStartOf="@+id/spinner_categories"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_comments" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_type" />
+
+    <Spinner
+        android:id="@+id/spinner_categories"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="200dp"
+        android:minHeight="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/edittext_comments"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textview_categories"
+        app:layout_constraintTop_toBottomOf="@+id/togglebutton_type" />
+
+    <TextView
+        android:id="@+id/textview_comments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/field_comments"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_edit_transaction"
+        app:layout_constraintEnd_toStartOf="@+id/edittext_comments"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_categories" />
 
     <EditText
-        android:id="@+id/edittext_categories"
+        android:id="@+id/edittext_comments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="120dp"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/button_edit_transaction"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textview_categories"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_comments"/>
+        app:layout_constraintStart_toEndOf="@+id/textview_comments"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_categories" />
 
     <Button
         android:id="@+id/button_edit_transaction"
@@ -194,7 +188,7 @@
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_categories"/>/>
+        app:layout_constraintTop_toBottomOf="@+id/textview_comments" />/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
