--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,7 @@
                     app:layout_constraintVertical_bias="0.243" />
 
                 <EditText
-                    android:id="@+id/editview_username"
+                    android:id="@+id/edittext_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
@@ -110,7 +110,7 @@
                     app:layout_constraintVertical_bias="0.63" />
 
                 <EditText
-                    android:id="@+id/editview_password"
+                    android:id="@+id/edittext_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
@@ -128,6 +128,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/button_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/light_blue"
