--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -106,7 +106,7 @@
                     app:layout_constraintVertical_bias="0.243" />
 
                 <EditText
-                    android:id="@+id/editview_username"
+                    android:id="@+id/edittext_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
@@ -134,7 +134,7 @@
                     app:layout_constraintVertical_bias="0.63" />
 
                 <EditText
-                    android:id="@+id/editview_password"
+                    android:id="@+id/edittext_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
