--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/small_size"
                     android:layout_marginStart="15dp"
-                    app:layout_constraintBottom_toTopOf="@+id/textview_password"
+                    app:layout_constraintBottom_toTopOf="@+id/textview_current_password"
                     app:layout_constraintEnd_toStartOf="@+id/edittext_username"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
@@ -97,7 +97,7 @@
                     />
 
                 <TextView
-                    android:id="@+id/textview_password"
+                    android:id="@+id/textview_current_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/label_password"
@@ -105,14 +105,14 @@
                     android:textSize="@dimen/small_size"
                     android:layout_marginStart="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/edittext_password"
+                    app:layout_constraintEnd_toStartOf="@+id/edittext_current_password"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
                     app:layout_constraintTop_toBottomOf="@+id/textview_username"
                     app:layout_constraintVertical_bias="0.63" />
 
                 <EditText
-                    android:id="@+id/edittext_password"
+                    android:id="@+id/edittext_current_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
@@ -121,7 +121,7 @@
                     android:width="150dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
-                    app:layout_constraintStart_toEndOf="@+id/textview_password"
+                    app:layout_constraintStart_toEndOf="@+id/textview_current_password"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.85"
                     />
