--- a/app/src/main/res/layout/activity_view_category.xml
+++ b/app/src/main/res/layout/activity_view_category.xml
@@ -68,7 +68,7 @@
                         android:gravity="center"
                         android:text="Category"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/normal_size"
+                        android:textSize="@dimen/small_size"
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
