--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -65,7 +65,7 @@
                         android:gravity="center"
                         android:text="Report"
                         android:textColor="@color/white"
-                        android:textSize="20sp"
+                        android:textSize="@dimen/small_size"
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
