--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -15,7 +15,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_tittle_bar_height">
+            android:layout_height="@dimen/app_title_bar_height">
 
 
             <ImageView
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="Spenditure"
                 android:textColor="@color/white"
-                android:textSize="@dimen/app_tittle"
+                android:textSize="@dimen/app_title"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="@+id/imageView2"
