--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_category"
-        android:title="@string/tittle_category"
+        android:title="@string/title_category"
         android:icon="@drawable/symbol_list"/>
 
     <item
