--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -319,13 +319,42 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="24dp" />
-
-                <androidx.viewpager.widget.ViewPager
-                    android:id="@+id/viewpager_report"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:layout_marginHorizontal="50dp"
-                    />
+                    android:layout_height="400dp">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="400dp"
+                        android:layout_marginHorizontal="50dp"
+                        android:id="@+id/report_no_category_report"
+                        android:orientation="vertical"
+                        android:background="@drawable/background_dark_blue"
+                        android:visibility="invisible">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="@dimen/space_6"
+                            android:paddingHorizontal="@dimen/space_2"
+                            android:text="Group transaction by Category to see this report"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/normal_size"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.viewpager.widget.ViewPager
+                        android:id="@+id/viewpager_report"
+                        android:layout_width="match_parent"
+                        android:layout_height="400dp"
+                        android:layout_marginHorizontal="50dp"
+                        />
+                </RelativeLayout>
+
 
                 <View
                     android:layout_width="match_parent"
