--- a/app/src/main/res/layout/activity_create_transaction.xml
+++ b/app/src/main/res/layout/activity_create_transaction.xml
@@ -217,7 +217,7 @@
                 android:text="@string/field_categories"
                 android:textSize="25dp"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toTopOf="@+id/textview_comments"
+                app:layout_constraintBottom_toTopOf="@+id/textview_image"
                 app:layout_constraintEnd_toStartOf="@+id/spinner_categories"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textview_type" />
@@ -230,10 +230,34 @@
                 android:minHeight="30dp"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/light_blue"
-                app:layout_constraintBottom_toTopOf="@+id/edittext_comments"
+                app:layout_constraintBottom_toTopOf="@+id/button_take_image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textview_categories"
                 app:layout_constraintTop_toBottomOf="@+id/togglebutton_type"/>
+
+            <TextView
+                android:id="@+id/textview_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/field_image"
+                android:textSize="25dp"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toTopOf="@+id/textview_comments"
+                app:layout_constraintEnd_toStartOf="@+id/button_take_image"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_categories" />
+
+            <Button
+                android:id="@+id/button_take_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_take_image"
+                android:textSize="25dp"
+                android:backgroundTint="@color/light_blue"
+                app:layout_constraintBottom_toTopOf="@+id/edittext_comments"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textview_image"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_categories"/>
 
             <TextView
                 android:id="@+id/textview_comments"
@@ -245,7 +269,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
                 app:layout_constraintEnd_toStartOf="@+id/edittext_comments"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textview_categories" />
+                app:layout_constraintTop_toBottomOf="@+id/textview_image" />
 
             <EditText
                 android:id="@+id/edittext_comments"
@@ -257,7 +281,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textview_comments"
-                app:layout_constraintTop_toBottomOf="@+id/spinner_categories"/>
+                app:layout_constraintTop_toBottomOf="@+id/button_take_image"/>
 
             <Button
                 android:id="@+id/button_create_transaction"
