--- a/app/src/main/res/layout/activity_image_capture.xml
+++ b/app/src/main/res/layout/activity_image_capture.xml
@@ -14,8 +14,18 @@
     <Button
         android:id="@+id/button_take_image"
         android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:text="@string/field_image"
+        android:layout_height="100dp"
+        android:text="@string/label_take_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <Button
+        android:id="@+id/button_confirm"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:text="@string/label_confirm"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
