--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -360,6 +360,42 @@
                     android:layout_width="match_parent"
                     android:layout_height="24dp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="500dp"
+                    android:layout_marginHorizontal="50dp"
+                    android:gravity="center"
+
+                    android:id="@+id/report_cat_chart"
+                    android:orientation="vertical"
+                    android:background="@drawable/background_dark_blue"
+                    android:padding="@dimen/space_2"
+
+
+                    >
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Categories spending percentage"
+                        android:textAlignment="center"
+                        android:paddingHorizontal="@dimen/space_2"
+                        android:layout_marginHorizontal="@dimen/space_6"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/normal_size"
+                        android:textStyle="bold"
+                        />
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/piechart_category"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="24dp" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
